--- a/templates/create_parcel.html
+++ b/templates/create_parcel.html
@@ -19,13 +19,9 @@
             border-radius:0; box-shadow:0 6px 14px rgba(0,0,0,.15);
             padding:28px;
         }
-        input, select, textarea, .form-control, .btn, .list-group-item{
+        input, select, textarea, .btn{
             border-radius:0 !important;
         }
-        .select2-container{ width:100% !important; }
-        .select2-selection--single{ height:38px !important; }
-        .select2-selection__rendered{ line-height:38px !important; }
-        .select2-selection__arrow{ height:38px !important; }
     </style>
 </head>
 <body>
